# Irrigation-Bot---Autonomous-Dry-Land-Watering-Robot

./: READ ME(overview)  irrigation_bot.urdf
install/: local_setup.sh  setup.sh
install/irrigation_bot/lib/irrigation_bot/: irrigation_bot
install/irrigation_bot/share/irrigation_bot/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/irrigation_bot/share/irrigation_bot/config/: irrigation_bot.rviz
install/irrigation_bot/share/irrigation_bot/launch/: irrigation_bot_launch.py  sim_launch.py
install/irrigation_bot/share/irrigation_bot/urdf/: irrigation_bot_clean.urdf
install/irrigation_bot/share/irrigation_bot/worlds/: irrigation_world.sdf
install/irrigation_bot_controller/lib/irrigation_bot_controller/: simple_mover
install/irrigation_bot_controller/share/irrigation_bot_controller/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build  latest_list
models/sun/: model.config  model.sdf
src/irrigation_bot/: package.xml  setup.cfg  setup.py
src/irrigation_bot/config/: irrigation_bot.rsp.yaml
src/irrigation_bot/urdf/: irrigation_bot.sdf  irrigation_bot.urdf
src/irrigation_bot/worlds.bak/: worlds
src/irrigation_bot_controller/: package.xml  setup.cfg  setup.py
src/rviz/: irrigation_bot.rviz
